--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,9 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "program": "${workspaceFolder}//Module11_minigame/Challenge-project-Create-methods-in-CSharp-main/Starter/Program.cs",
+        }
+    ]
 }
